--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p class=p1>My personal page </br>Emergency medicine consultant in Egypt,KSA and UAE</p>
         </div>
         <div class="about.me">
-            <a href="about.html"title="about-me"><img class="about-pic" src="about me.png" alt="about-me"></a>
+            <a href="about.html"title="about-me"><img class="about-pic" src="Aboutme.png" alt="about-me"></a>
             <p class=about-txt>About me</p>
         </div>
         <div class="contactme">
