--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <link rel="icon"href="CSS\favicon.ico">
     </head>
     <body>
-        <img class="EM-pic" src="EmergMed.png" alt="EM">
+        
         <div class="intro1">
             <img class="my-pic" src="me.png" alt="my-pic">
             <p class="name">Ahmed Ramadan</p>
             <p class=p1>My personal page </br>Emergency medicine consultant in Egypt,KSA and UAE</p>
         </div>
+        
         <div class="about.me">
             <a href="about.html"title="about-me"><img class="about-pic" src="Aboutme.png" alt="about-me"></a>
             <p class=about-txt>About me</p>
@@ -39,5 +40,6 @@
             <img class="radio-pic" src="radio.png" alt="radiological">
             <p class=radio-txt>Radiological</p>
         </div>
+        <div><img class="EM-pic" src="EmergMed.png" alt="EM"></div>
     </body>
 </html>
